# msvc-tmpfile-posix-delete

./: .gitignore  CMakeLists.txt  NtSetInformationFile.h  README.md  main.cpp
